force-app/main/default/objects/PricebookEntry/fields/Callout_Standard_Price_Difference__c.field-meta.xml
<CustomField>
    <fullName>Callout_Standard_Price_Difference__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that quotes should include the difference from this product&apos;s standard price</inlineHelpText>
    <label>Callout Standard Price Difference</label>
    <type>Checkbox</type>
</CustomField>