force-app/main/default/objects/PricebookEntry/fields/Employee_Range_Upper__c.field-meta.xml
<CustomField>
    <fullName>Employee_Range_Upper__c</fullName>
    <formula>Product2.Employee_Range_Upper__c</formula>
    <label>Employee Range Upper</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>