force-app/main/default/objects/PricebookEntry/fields/Partner_Fee__c.field-meta.xml
<CustomField>
    <fullName>Partner_Fee__c</fullName>
    <description>Overrides price book&apos;s partner fee</description>
    <inlineHelpText>Overrides price book&apos;s partner fee</inlineHelpText>
    <label>Partner Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>