force-app/main/default/objects/PricebookEntry/fields/Partner_Fee_Override__c.field-meta.xml
<CustomField>
    <fullName>Partner_Fee_Override__c</fullName>
    <description>Indicates that the pricebook&apos;s partner fee is being overridden</description>
    <formula>!ISNULL(Partner_Fee__c)</formula>
    <label>Partner Fee Override</label>
    <type>Checkbox</type>
</CustomField>