force-app/main/default/objects/PricebookEntry/fields/Price_Difference_Message__c.field-meta.xml
<CustomField>
    <fullName>Price_Difference_Message__c</fullName>
    <description>Used for quotes/invoices</description>
    <inlineHelpText>Used for quotes/invoices</inlineHelpText>
    <label>Price Difference Message</label>
    <length>200</length>
    <type>Text</type>
</CustomField>