force-app/main/default/objects/PricebookEntry/fields/Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Option__c</fullName>
    <formula>TEXT(Product2.Service_Option__c )</formula>
    <label>Service Option</label>
    <type>Text</type>
</CustomField>